<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justlisten.Movie1Song1">

    <LinearLayout
        android:id="@+id/m1_song1_ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/movie_1_song_1_detail"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/movie1_song1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/icon_queue_music"
                android:src="@drawable/ic_queue_music_black_24dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/song_1_background"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_1_song1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/repeat"
                android:src="@drawable/ic_repeat_black_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/shuffle"
                android:src="@drawable/ic_shuffle_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/song_1_like"
                android:src="@drawable/ic_thumb_up_black_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/play_previous"
                android:src="@drawable/ic_skip_previous_black_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/movie1_song1_play_button"
                android:src="@drawable/ic_play_circle_outline_black_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/play_next"
                android:src="@drawable/ic_skip_next_black_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/song_1_dislike"
                android:src="@drawable/ic_thumb_down_black_24dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
