<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justlisten.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home_button"
            android:src="@drawable/ic_home_black_24dp" />

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/search_button"
            android:src="@drawable/ic_search_black_24dp" />

        <ImageView
            android:id="@+id/playlist_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/playlist_play__button"
            android:src="@drawable/ic_playlist_play_black_24dp" />

        <ImageView
            android:id="@+id/new_released_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/new_release_button"
            android:src="@drawable/ic_new_releases_black_24dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#FFEBEE"
        android:text="@string/home_screen_detail"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/movie_1_image_home"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/movie_1_image_home"
                android:scaleType="center"
                android:src="@drawable/movie1image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_1_image_home"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/movie1_text"
                android:textColor="#000000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl2_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/movie_2_image_home"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/movie_2_image_home"
                android:scaleType="center"
                android:src="@drawable/movie2image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_2_image_home"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/movie2_text"
                android:textColor="#000000" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/recent_play_home_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/home_screen_recent_play_image"
            android:src="@drawable/movie_1_song1" />

        <TextView
            android:id="@+id/home_screen_recent_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/recent_play_home_image"
            android:text="@string/movie1_song1"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_screen_recent_play"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/recent_play_home_image"
            android:text="@string/artist_text" />

        <ImageView
            android:id="@+id/play_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/play_arrow_black"
            android:src="@drawable/ic_play_arrow_black_24dp" />
    </RelativeLayout>
</LinearLayout>
