<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_1_image"
    tools:context="com.example.android.justlisten.Movie1">

    <TextView
        android:id="@+id/m1DisTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#FFEBEE"
        android:text="@string/movie_1_screen_description"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/m1ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/m1DisTextView"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movie1_song1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/movie1_song1"
            android:textColor="#546E7A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/song1_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie1_song1_play_button"
            android:src="@drawable/ic_play_circle_outline_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/m1_ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/m1ll1"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movie1_song2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/movie1_song2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/song2_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie1_song2_play_button"
            android:src="@drawable/ic_play_circle_outline_black_24dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/m1HomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/movie1_home_button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/movie1_next_button" />

    <LinearLayout
        android:id="@+id/m1_ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/m1HomeButton"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/movie1_apl_button"
            android:src="@drawable/ic_playlist_add_black_24dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/movie1_stop_button"
            android:src="@drawable/ic_stop_black_24dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play_arrow_black"
            android:src="@drawable/ic_play_arrow_black_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/movie1_recent_play_pause_button"
            android:src="@drawable/ic_pause_circle_filled_black_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/m1_recent_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/m1_ll3"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/movie1_song1"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/m1_recent_play"
        android:layout_margin="16dp"
        android:background="#CCF4FF81"
        android:text="@string/recent_play_text_view"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>
